[ci skip] 35826074003 https://github.com/tkoyama010/scientific-python-lectures-translations/actions/runs/12848570870/job/35826074003

--- a/locale/ja/LC_MESSAGES/packages.po
+++ b/locale/ja/LC_MESSAGES/packages.po
@@ -1223,7 +1223,7 @@ msgstr ""
 
 #: ../../scientific-python-lectures/packages/scikit-image/index.rst-1
 msgid "3D images"
-msgstr ""
+msgstr "3D画像"
 
 #: ../../scientific-python-lectures/packages/scikit-image/index.rst:321
 msgid ""
