[ci skip] 36195531658 https://github.com/tkoyama010/scientific-python-lectures-translations/actions/runs/12979605807/job/36195531658

--- a/locale/ja/LC_MESSAGES/advanced.po
+++ b/locale/ja/LC_MESSAGES/advanced.po
@@ -5111,7 +5111,7 @@ msgstr ""
 #: ../../scientific-python-lectures/advanced/image_processing/index.rst:574
 #: ../../scientific-python-lectures/advanced/image_processing/index.rst:727
 msgid "Synthetic data::"
-msgstr ""
+msgstr "合成データ::"
 
 #: ../../scientific-python-lectures/advanced/image_processing/index.rst:582
 msgid ""
@@ -5280,7 +5280,7 @@ msgstr ""
 #: ../../scientific-python-lectures/advanced/mathematical_optimization/index.rst:544
 #: ../../scientific-python-lectures/advanced/mathematical_optimization/index.rst:1027
 msgid "Full code examples"
-msgstr ""
+msgstr "全コード例"
 
 #: ../../scientific-python-lectures/advanced/image_processing/index.rst:902
 msgid "More on image-processing:"
