--- a/locale/ja/LC_MESSAGES/guide.po
+++ b/locale/ja/LC_MESSAGES/guide.po
@@ -4,7 +4,7 @@
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 # Translators:
-# Tetsuo Koyama <tkoyama010@gmail.com>, 2024
+# Tetsuo Koyama <tkoyama010@gmail.com>, 2025
 # 
 #, fuzzy
 msgid ""
@@ -13,7 +13,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-01-01 00:13+0000\n"
 "PO-Revision-Date: 2024-11-27 19:15+0000\n"
-"Last-Translator: Tetsuo Koyama <tkoyama010@gmail.com>, 2024\n"
+"Last-Translator: Tetsuo Koyama <tkoyama010@gmail.com>, 2025\n"
 "Language-Team: Japanese (https://app.transifex.com/tkoyama010/teams/202028/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -166,9 +166,9 @@ msgid ""
 "(you still need to create a fork of the project). Edit the source and choose"
 " \"Create a new branch for this commit and start a pull request\"."
 msgstr ""
-"もし講義中に誤字脱字、不明瞭な表現、不器用な表現を見つけたら、ぜひ改善にご協力ください。 簡単なテキスト編集は、 "
-"`GitHubのフォーク<https://help.github.com/articles/editing-files-in-your-"
-"repository/>`_ にあるファイルを編集することで行えます。 講義の各htmlページでは、右上の **edit** "
+"もし講義中に誤字脱字、不明瞭な表現、不器用な表現を見つけたら、ぜひ改善にご協力ください。 簡単なテキスト編集は、 `GitHubのフォーク "
+"<https://help.github.com/articles/editing-files-in-your-repository/>`_ "
+"にあるファイルを編集することで行えます。 講義の各htmlページでは、右上の **edit** "
 "ボタンが編集可能なページのソースにリンクしています（プロジェクトのフォークを作成する必要があります）。 ソースを編集し、\"Create a new "
 "branch for this commit and start a pull request\" を選択してください。"
 
